# bchain-streamlet

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml  test.yml
include/: content.hpp  dummy_node.hpp  hashservice.hpp  message.hpp  messagetype.hpp  node.hpp  round_service.hpp  scheduler.hpp  simple_scheduler.hpp  streamlet.hpp  utils.hpp
include/message/: content.hpp  message.hpp  message_type.hpp
include/node/: base_node.hpp  block.hpp  dishonest_node.hpp  dummy_node.hpp  hashable.hpp  honest_node.hpp  node.hpp
include/node/dag/: dag.hpp  status.hpp  vertex.hpp
include/node/tree/: tree.hpp  vertex.hpp
include/scenarios/: config.hpp  player.hpp  runner.hpp  scheduler_type.hpp  service_type.hpp
include/scheduler/: scheduler.hpp  simple_scheduler.hpp
include/schedulers/: base_scheduler.hpp  partitioning_scheduler.hpp  queue.hpp  queue.tpp  scheduler.hpp  simple_scheduler.hpp
include/service/: round_service.hpp  twice_service.hpp
include/services/: abstract_service.hpp  repeat_service.hpp  round_service.hpp  synchronizer.hpp  twice_service.hpp
include/state/: block.hpp  hashable.hpp  state_renderer.hpp  tree.hpp  vertex.hpp
include/state/tree/: state_renderer.hpp  status.hpp  tree.hpp  tree_renderer.hpp  tree_union.hpp  vertex.hpp
res/scenarios/: all_dummies.yml  all_dummys.yml  baddies_win.yml  honest_with_dummies.yml  partitioning.yml  template.yml  test-config-with-repeat.yml  test-config.yml
src/: CMakeLists.txt  content.cpp  dummy_node.cpp  hashservice.cpp  message.cpp  node.cpp  round_service.cpp  scheduler.cpp  simple_scheduler.cpp  streamlet.cpp
src/logging/: CMakeLists.txt  easylogging++.cc
src/message/: CMakeLists.txt  content.cpp  message.cpp
src/node/: CMakeLists.txt  base_node.cpp  block.cpp  dishonest_node.cpp  dummy_node.cpp  honest_node.cpp  node.cpp
src/node/dag/: dag.cpp  vertex.cpp
src/node/tree/: tree.cpp  vertex.cpp
src/scenarios/: CMakeLists.txt  config.cpp  player.cpp  runner.cpp
src/scheduler/: CMakeLists.txt  scheduler.cpp  simple_scheduler.cpp
src/schedulers/: CMakeLists.txt  base_scheduler.cpp  ischeduler.cpp  partitioning_scheduler.cpp  scheduler.cpp  simple_scheduler.cpp
src/service/: CMakeLists.txt  round_service.cpp  twice_service.cpp
src/services/: CMakeLists.txt  abstract_service.cpp  repeat_service.cpp  round_service.cpp  synchronizer.cpp  twice_service.cpp
src/state/: CMakeLists.txt  block.cpp  state_renderer.cpp  tree.cpp  vertex.cpp
src/state/tree/: CMakeLists.txt  state_renderer.cpp  tree.cpp  tree_renderer.cpp  tree_union.cpp  vertex.cpp
tests/: config-test.cpp  dag.cpp  dishonest_node-test.cpp  example.cpp  honest_node-test.cpp  main.cpp  player-test.cpp  queue-test.cpp  runner-test.cpp  scheduler-test.cpp  service-test.cpp  tree-test.cpp  tree.cpp  tree_union-test.cpp
